--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>New Tab</title>
   </head>
   <body>
+    <div id="modal-root"></div>
     <div id="app"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
